--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 </ul>
 
 <h2>O Poder do Acúmulo</h2>
-<p>Se você melhorar apenas 1% por dia, ao final de um ano, terá melhorado cerca de 37 vezes em relação ao começo.</p>
+<p>Se você melhorar apenas 1% por dia, ao final de um ano, terá melhorado cerca de 365% em relação ao começo.</p>
 <p>Pequenas ações + Tempo + Consistência = Grande Transformação</p>
 
 <h2>Conclusão</h2>
@@ -62,7 +62,7 @@
 
   <form id="formComentario">
     <input type="text" id="nome" placeholder="Seu nome" maxlength="50" required />
-    <textarea id="comentario" placeholder="Escreva seu comentário" maxlength="500" rows="4" required></textarea>
+    <textarea id="comentario" placeholder="Escreva seu comentário sobre oque achou do blog" maxlength="500" rows="4" required></textarea>
     <button type="submit">Enviar</button>
   </form>
 
