--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
   <li>Organize um pequeno espaço da sua casa</li>
   <li>Estude algo novo</li>
 </ul>
-
+<br><br>
+  <img src="https://1.bp.blogspot.com/-L-QUDeqq6-8/XySR4mXT9eI/AAAAAAAAf6I/WSJKRYICd20ICPyLxPv2oA4UmXCFXYrOgCLcBGAsYHQ/s880/img_5aa0108878390.png" alt="Pessoas comparando comida mas é inutil">
+  <br><br>
 <h2>O Poder do Acúmulo</h2>
 <p>Se você melhorar apenas 1% por dia, ao final de um ano, terá melhorado cerca de 365% em relação ao começo.</p>
 <p>Pequenas ações + Tempo + Consistência = Grande Transformação</p>
